# book-dice

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
src/book_dice/: __main__.py  cli.py  config.py  core.py  web.py
src/book_dice/static/: index.html
tests/: test_cli.py  test_config.py  test_core.py  test_web.py
