[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-dice"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/book_dice"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
